# hishBox

./: CMakeLists.txt  Dockerfile  Readme.md
src/: gpio_handler.hpp  main.cpp  media_player.cpp  media_player.hpp  nfc_frame.hpp  nfc_reader.cpp  nfc_reader.hpp
